新建界面：根据页面输入的内容可以正常输入具体信息，点击确定是可以正常存入数据库

--- a/tools_page/pubspec.yaml
+++ b/tools_page/pubspec.yaml
@@ -29,6 +29,7 @@ dev_dependencies:
     sdk: flutter
   ssh: ^0.0.3
   sqflite: ^1.1.0
+  uuid: ^1.0.3
 
 
 # For information on the generic Dart part of this file, see the
